--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://amit-dotcode.github.io/assignment-task",
-  "name": "assignment-app",
+  "homepage": "http://amit-dotcode.github.io/Assigment-repo-react-2",
+  "name": "assignment-app-2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
